Made the navigation dynamic based on controller data.

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,3 +1,12 @@
 <div ng-controller="Home as vm">
-
+  <p>
+    Explanation of how it works. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid distinctio
+    doloremque
+    doloribus placeat sapiente. A, doloremque eveniet nemo quasi soluta sunt ullam. Amet atque consequuntur, facere
+    minus quas velit voluptatum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid distinctio doloremque
+    doloribus placeat sapiente. A, doloremque eveniet nemo quasi soluta sunt ullam. Amet atque consequuntur, facere
+    minus quas velit voluptatum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid distinctio doloremque
+    doloribus placeat sapiente. A, doloremque eveniet nemo quasi soluta sunt ullam. Amet atque consequuntur, facere
+    minus quas velit voluptatum.
+  </p>
 </div>
