--- a/app/index.html
+++ b/app/index.html
@@ -12,11 +12,11 @@
   <h1>Waitstaff Calculator</h1>
 
   <!--Navigation-->
-  <div class="center-block">
-    <ul class="nav nav-pills">
-      <li class="active"><a href="#/">Home</a></li>
-      <li><a href="#/newmeal">New Meal</a></li>
-      <li><a href="#/earnings">My Earnings</a></li>
+  <div ng-controller="Nav as vm">
+    <ul class="nav nav-pills nav-justified">
+      <li ng-class="{active: vm.getActiveTab(tab.name)}" ng-repeat="tab in vm.tabs" ng-click="vm.setActiveTab(tab.name)" ng-cloak>
+        <a href="#/{{tab.route}}">{{tab.name}}</a>
+      </li>
     </ul>
   </div>
   <!--ng-view-->
@@ -27,7 +27,9 @@
 
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-messages/angular-messages.js"></script>
+<script src="bower_components/angular-route/angular-route.js"></script>
 <script src="app.js"></script>
+<script src="nav.js"></script>
 <script src="home/home.js"></script>
 <script src="meal/meals.js"></script>
 <script src="newmeal/newmeal.js"></script>
