Isolated the nav files in their own dir and fixed a bug with active tab incorrect if app loaded at a specific url.

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,12 +1,14 @@
-<div ng-controller="Home as vm">
-  <p>
+<div ng-controller="Home as vm" class="row">
+  <div class="col-sm-6 col-sm-offset-3">
     Explanation of how it works. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid distinctio
     doloremque
     doloribus placeat sapiente. A, doloremque eveniet nemo quasi soluta sunt ullam. Amet atque consequuntur, facere
-    minus quas velit voluptatum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid distinctio doloremque
+    minus quas velit voluptatum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid distinctio
+    doloremque
     doloribus placeat sapiente. A, doloremque eveniet nemo quasi soluta sunt ullam. Amet atque consequuntur, facere
-    minus quas velit voluptatum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid distinctio doloremque
+    minus quas velit voluptatum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid distinctio
+    doloremque
     doloribus placeat sapiente. A, doloremque eveniet nemo quasi soluta sunt ullam. Amet atque consequuntur, facere
     minus quas velit voluptatum.
-  </p>
+  </div>
 </div>
