--- a/app/index.html
+++ b/app/index.html
@@ -12,13 +12,7 @@
   <h1>Waitstaff Calculator</h1>
 
   <!--Navigation-->
-  <div ng-controller="Nav as vm">
-    <ul class="nav nav-pills nav-justified">
-      <li ng-class="{active: vm.getActiveTab(tab.name)}" ng-repeat="tab in vm.tabs" ng-click="vm.setActiveTab(tab.name)" ng-cloak>
-        <a href="#/{{tab.route}}">{{tab.name}}</a>
-      </li>
-    </ul>
-  </div>
+  <div ng-include="'nav/nav.html'"></div>
   <!--ng-view-->
   <div ng-view></div>
 
@@ -29,7 +23,7 @@
 <script src="bower_components/angular-messages/angular-messages.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="app.js"></script>
-<script src="nav.js"></script>
+<script src="nav/nav.js"></script>
 <script src="home/home.js"></script>
 <script src="meal/meals.js"></script>
 <script src="newmeal/newmeal.js"></script>
